# sigma

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/: plot.py
