[project]
name = "sigma"
version = "0.1.0"
license = { file = "LICENSE" }
requires-python = ">=3.13"
dependencies = [
    "kagglehub>=0.3.11",
    "pandas>=2.2.3",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.6",
]

[tool.mypy]
follow_untyped_imports = true
strict = true

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
