[project]
name = "sigma"
version = "0.1.0"
license = { file = "LICENSE" }
requires-python = ">=3.13"
dependencies = [
    "kagglehub>=0.3.11",
    "pandas>=2.2.3",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ruff>=0.11.6",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
